--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@ div.scroll_box {
   overflow: scroll;
   max-height: 550px;
   scroll-behavior: smooth;
+  padding: 1.5px;
 }
 
 .my_playlists h1 {
