--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,11 @@ header div.title {
 
 #logoutBtn {
   font-size: 20px;
-  margin: 10px auto;
+  margin: 30px auto;
   font-family: 'Racing Sans One';
   border: 3px solid yellowgreen;
   border-radius: 15px;
-  padding: 4px .5em;
+  padding: 5px 4em;
   transition: .3s;
 }
 
