--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,11 @@ body {
   font-family: 'Racing Sans One', cursive;
   color: white;
   background-color: rgb(0, 0, 0);
-
 }
+
+ * {
+  transition: .1s;
+ }
 
 /* class selector */
 .add_borders {
@@ -34,6 +37,11 @@ body {
   text-align: center;
   justify-content: center;
   margin: 0 auto;
+  
+}
+
+header {
+  margin-top: 2em;
 }
 header div.title {
   max-width: 300px;
@@ -43,6 +51,9 @@ header div.title {
   justify-content: center;
   background-color: hotpink;
   border-radius: 50%;
+  box-shadow: 5px 2px 28px 1px rgba(180, 181, 180, 0.794) inset;
+  -webkit-box-shadow: 5px 2px 28px 1px rgba(180, 181, 180, 0.794) inset;
+  -moz-box-shadow: 5px 2px 28px 1px rgba(180, 181, 180, 0.794) inset;
 }
 
 header h3 {
@@ -55,6 +66,9 @@ header h3 {
   margin: 30px auto;
   font-family: 'Racing Sans One';
   border-color: yellowgreen;
+  box-shadow: 3px -3px 15px 3px rgba(86,240,14,0.84) inset;
+-webkit-box-shadow: 3px -3px 15px 3px rgba(86,240,14,0.84) inset;
+-moz-box-shadow: 3px -3px 15px 3px rgba(86,240,14,0.84) inset;
   border-radius: 15px;
   padding: 5px 4em;
 }
@@ -122,6 +136,9 @@ div.scroll_box {
   max-height: 30em;
   scroll-behavior: smooth;
   padding: 1.5px;
+  box-shadow: 5px 2px 308px 1px rgba(221,255,152,0.31) inset;
+  -webkit-box-shadow: 5px 2px 308px 1px rgba(221,255,152,0.31) inset;
+  -moz-box-shadow: 5px 2px 308px 1px rgba(221,255,152,0.31) inset;
 }
 
 .my_playlists h1 {
@@ -141,6 +158,9 @@ div.scroll_box {
   text-align: left;
   border-color: hotpink;
   border-radius: 15px;
+  box-shadow: 5px 2px 42px 1px rgba(253, 224, 249, 0.983) inset;
+  -webkit-box-shadow: 5px 2px 42px 1px rgba(253,224,249,0.36) inset;
+  -moz-box-shadow: 5px 2px 42px 1px rgba(253,224,249,0.36) inset;
 }
 
 .playlist_wrapper h3 {
@@ -162,6 +182,14 @@ div.scroll_box {
   color: black;
   background-color: hotpink;
   transition: .3s;
+  /* box-shadow: 5px 2px 42px 1px rgba(253, 224, 249, 0.983) inset;
+  -webkit-box-shadow: 5px 2px 42px 1px rgba(253, 224, 249, 0.983) inset;
+  -moz-box-shadow: 5px 2px 42px 1px rgba(253, 224, 249, 0.983) inset; */
+  box-shadow: 2px -2px 69px -17px rgba(253, 224, 249209,0.84) inset;
+-webkit-box-shadow: 2px -2px 69px -17px rgba(253, 224, 249209,0.84) inset;
+-moz-box-shadow: 2px -2px 69px -17px rgba(253, 224, 249209,0.84) inset;
+
+  
 }
 
 .playlist_wrapper button:hover {
@@ -177,7 +205,6 @@ div.scroll_box {
 .playlist_wrapper p {
   color: hotpink;
   font-family: 'Bungee Inline', cursive;
-  font-size: small;
   font-size: 14px;
 }
 
@@ -187,11 +214,19 @@ div.scroll_box {
     height: 100em;
     margin: auto;
   }
+
+  .playlist_wrapper h3 {
+    font-size: 24px;
+  }
+
+  .playlist_wrapper p {
+    font-size: 11px;
+  }
 }
 
-@media screen and (max-height: 700px){
+@media screen and (max-height: 740px){
   header div.title {
-    height: 50px;
+    height: 55px;
   }
 
   div.scroll_box {
